# mcp4hal

./: .env.example  .gitignore  pypi_package.sh  pypi_publish.sh  pyproject.toml  server.py  settings.py  startup.sh  todo.txt
config/: mcp_servers_config.json
hardware/esp32/: how-to.md
hardware/esp32/script/: flash.sh
mock/: mock_mcp_server.py
src/core/: server_base.py
src/core/protocol/: mqtt.py
src/hal/mqtt/: __init__.py  mcp_server_proxy_mqtt.py  mcp_server_proxy_mqtt_supervisor.py  mcp_server_proxy_mqtt_worker.py  mqtt_client.py
src/hardware/base/micropython/mcp4hal_mqtt/: mqtt_client.py
src/hardware/esp32/: how-to.md
src/hardware/esp32/script/: compile.sh  flash.sh
src/mcp4hal/hardware/esp32/script/: flash.sh
src/mock/: mock_mcp_server.py
tests/: mcp_inspector.sh
tests/mqtt/: mock_mcp_server_proxy.py  mock_mqtt_mcu.py  test_micropython_sync.py  test_mqtt_esp32.py
